syntax = "proto3";

option csharp_namespace = "RTSharp.Daemon.Protocols";

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service GRPCFilesService {
    rpc GetDirectoryInfo (google.protobuf.StringValue) returns (FileSystemItem);
    rpc CreateDirectory (google.protobuf.StringValue) returns (google.protobuf.Empty);
    rpc RemoveEmptyDirectory (google.protobuf.StringValue) returns (google.protobuf.Empty);
    rpc MediaInfo (MediaInfoInput) returns (MediaInfoReply);
    rpc CheckExists (CheckExistsInput) returns (CheckExistsReply);
    rpc AllowedToDelete (AllowedToDeleteInput) returns (AllowedToDeleteReply);
    rpc AllowedToRead (AllowedToReadInput) returns (AllowedToReadReply);

    rpc Internal_SendFiles (SendFilesInput) returns (stream FileBuffer);
    rpc SaveFiles (SaveFilesFromRemoteInput) returns (stream SaveFilesFromRemoteReply);
}

message AllowedToReadInput {
    repeated string Paths = 1;
}

message AllowedToReadReply {
    message PathWithStatus {
        string Path = 1;
        bool Value = 2;
    }
    
    repeated PathWithStatus Reply = 1;
}

message AllowedToDeleteInput {
    repeated string Paths = 1;
}

message AllowedToDeleteReply {
    message PathWithStatus {
        string Path = 1;
        bool Value = 2;
    }
    
    repeated PathWithStatus Reply = 1;
}

message SaveFilesFromRemoteReply {
    google.protobuf.StringValue File = 1;
    uint64 BytesReceived = 2;
}

message SaveFilesFromRemoteInput {
    repeated string Paths = 1;
}

message SendFilesInput {
    repeated string Paths = 1;
}

message FileBuffer {
    oneof Data {
        string Path = 1;
        bytes Buffer = 2;
    }
}

message CheckExistsInput {
    repeated string Paths = 1;
}

message CheckExistsReply {
    map<string, bool> Existence = 1;
}

message MediaInfoInput {
    repeated string Paths = 1;
}

message MediaInfoReply {
    repeated string Output = 1;
}

message FileSystemItem {
    repeated FileSystemItem Children = 1;
    bool Directory = 2;
    string Path = 3;
    uint64 Size = 4;
    google.protobuf.Timestamp LastModified = 5;
    string Permissions = 6;
}